--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
         <activity
-            android:name=".ui.component.MainActivity"
+            android:name=".ui.home.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/Theme.CarsList.NoActionBar">
             <intent-filter>
