--- a/build.gradle
+++ b/build.gradle
@@ -70,4 +70,13 @@ ext{
     coroutinesTestVersion = '1.4.2-native-mt'
     mockVersion = "1.10.5"
 
+    androidXTestCoreVersion = '1.3.0'
+    androidXTestExtKotlinRunnerVersion = '1.1.2'
+    androidXTestRulesVersion = '1.2.0'
+    androidXLegacySupport = '1.0.0'
+
+    //For Testing
+    fragmentVersion = '1.3.4'
+    fragmentKtxVersion = '1.3.4'
+
 }
