--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,11 @@ android {
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
 
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        testInstrumentationRunner 'com.capricorn.carslist.CustomTestRunner'
 
         buildConfigField 'String', 'BASE_URL', '"https://cdn.sixt.io/"'
+
+        testInstrumentationRunnerArguments clearPackageData: 'true'
 
     }
 
@@ -79,6 +81,22 @@ android {
         resolutionStrategy {
             exclude group: "org.jetbrains.kotlinx", module: "kotlinx-coroutines-debug"
 
+        }
+    }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
+    android {
+        sourceSets {
+            String sharedTestDir = 'src/sharedTest/resources'
+            test {
+                resources.srcDirs += sharedTestDir
+            }
+            androidTest {
+                resources.srcDirs += sharedTestDir
+            }
         }
     }
 }
