--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,3 @@
-import org.apache.tools.ant.filters.ConcatFilter
-
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -7,6 +5,8 @@ plugins {
     id 'kotlin-kapt'
     id 'kotlin-platform-android'
     id 'dagger.hilt.android.plugin'
+
+    //plugin to secure the api keys
     id 'com.google.secrets_gradle_plugin' version '0.5'
 }
 
@@ -120,14 +120,15 @@ dependencies {
     //android support and core dependencies
     implementation "androidx.appcompat:appcompat:$appCompactVersion"
     implementation "com.google.android.material:material:$materialVersion"
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifeCycleVersion"
+    implementation "androidx.legacy:legacy-support-v4:$legacySupportVersion"
 
 
 
+    //Hilt is Dependency Injector to simplify the Dependency and code testing.
     //hilt dependencies
     implementation "com.google.dagger:hilt-android:$hilt_version"
     //implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hiltViewModelVersion"
@@ -139,7 +140,7 @@ dependencies {
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
 
 
-    //retrofit
+    //retrofit to make the network api calls.
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$gsonConvertorVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
@@ -150,11 +151,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.maps.android:maps-ktx:3.0.1'
 
-    //Glide
+    //Glide for Image Loading
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
-    //Anchor Sheet Behaviour
+    //Anchor Sheet Behaviour to Anchor the Sheet on the View
     implementation "com.trafi:anchor-bottom-sheet-behavior:$anchorSheetBehaviourVersion"
 
 
@@ -179,7 +180,6 @@ dependencies {
     debugImplementation "androidx.fragment:fragment-testing:$fragmentVersion"
     implementation "androidx.test:core:$androidXTestCoreVersion"
     implementation "androidx.fragment:fragment:$fragmentVersion"
-
     androidTestImplementation "com.google.truth:truth:1.0.1"
 
 }
