--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ ext{
     //android support version
     appCompactVersion = "1.3.0"
     materialVersion = "1.3.0"
+    constraintLayoutVersion = "2.0.4"
+    legacySupportVersion = "1.0.0"
+    lifeCycleVersion = "2.3.1"
 
     //retrofit
     retrofitVersion = '2.9.0'
